--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
     "bcrypt": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "express": "~4.16.0",
+    "fb": "^2.0.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.2.1",
